// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon/Backgrounds story 1 1`] = `
<button>
  You should be able to switch backgrounds for this story
</button>
`;

exports[`Storyshots Addon/Backgrounds story 2 1`] = `
<button>
  This one too!
</button>
`;
